[package]
name = "sparse_image"
version = "0.0.1"
authors = [ "Nicholas Boyd <you@example.com>" ]
build = "build.rs"
[dependencies]
libc = "*"
image = "*"
[build-dependencies]
gcc = "*"
[profile.dev]
opt-level = 1  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
